fixed spacing issues with writer

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 /*CURRENT CUSTOM CSS*/
 @font-face{
 	font-family: "source-code";
-	src: url('../fonts/SourceCodePro-Regular.ttf') format('truetype');
+	src: url('../fonts/SourceCodePro-Light.ttf') format('truetype');
 }
 
 body {
@@ -144,7 +144,6 @@ table.navtable2 td{
 
 .m_desc{
 	width: 100%;
-	max-width: 1200px;
 	float: left;
 }
 
@@ -158,5 +157,6 @@ table.navtable2 td{
 }
 
 .writer{
+	max-width: 1200px;
 	float:left;
 }
